--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 * {
     margin: 0;
-    padding: 0;
+    padding: 30;
 }
 
 header {
@@ -8,7 +8,7 @@ header {
 }
 
 body {
-    background-color: black;
+    background-color:  #010309;
     color:white;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: normal;
@@ -48,3 +48,6 @@ ul li a {
     padding-left: 30em;
 }
 
+#mainhead {
+    text-align: center;
+}
