--- a/css/intex.css
+++ b/css/intex.css
@@ -29,3 +29,29 @@ a {
 body {
     font-size: 20px;
 }
+
+.main-nav {
+    float: right;
+    margin-top: 30px;
+}
+
+.main-nav li {
+    display: inline-block;
+    padding-right: 1em;
+}
+
+.main-nav li.active a {
+    color:white;
+    font-family: "Roboto", sans-serif;
+    text-decoration: none;
+    font-weight: bolder;
+    border: 1px solid white;
+}
+.main-nav li a:hover {
+    border: 1px solid;
+}
+
+ul a{
+    color:white;
+    text-decoration: none;
+}
