--- a/css/index.css
+++ b/css/index.css
@@ -33,6 +33,7 @@ body {
 .main-nav {
     float: right;
     margin-top: 30px;
+
 }
 
 .main-nav li {
@@ -40,15 +41,11 @@ body {
     padding-right: 1em;
 }
 
-.main-nav li.active a {
-    color:white;
-    font-family: "Roboto", sans-serif;
-    text-decoration: none;
-    font-weight: bolder;
-    border: 1px solid white;
-}
 .main-nav li a:hover {
     border: 1px solid;
+    border-radius: 150em;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 ul a{
